# rsl-mom-bot

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASING.md  alembic.ini  migrate.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-image.yml  ci.yml  claude-ci-fix.yml  claude-pr-review.yml  claude.yml  deploy.yml  infra-deploy.yml  infra-what-if.yml  notify-discord-release.yml  release.yml
.tmp/: release-notes-v1.0.0.md
docs/: secrets-inventory.md
docs/operations/: day-role-sync-runbook.md  day-role-sync-smoke.md  discord-roles-preflight.md
docs/spike/: 2026-05-17-postgres-aad-findings.md
docs/superpowers/plans/: 2026-05-08-mom-bot-framework.md  2026-05-17-bicep-deploy-and-revision-cleanup.md  2026-05-17-postgres-migration-epic-91.md  2026-05-20-issue-145-button-grid.md  2026-05-20-mom-bot-epic-128-phase-1-scoping.md  2026-05-22-sidecar-phases-4-6.md  2026-05-29-261-postgres-role-cutover.md
docs/superpowers/specs/: 2026-06-27-268-hydra-tank-week.md  2026-06-27-269-per-member-notifications.md
infra/: aad-runbook.md  main.bicep  main.bicepparam
infra/modules/: containerapp.bicep  keyvault.bicep  managed-identity.bicep  migrations-job.bicep  observability.bicep  postgres.bicep  storage.bicep
infra/scripts/: create-entra-admins.sh
migrations/: env.py
migrations/versions/: 0002_reminders_schema.py  0003_widen_reminder_snowflakes.py  0004_tank_week_columns.py  0005_tank_week_seed_rows.py  2f03efc88bf2_baseline.py  b3_member_notifications.py  b4_idx_mn_sent_occ_date.py  b4_index_member_notification_sent_date.py  b5_member_activity.py  b5_new_member_alert_subscription.py  b6_new_member_alert_subscription.py
scripts/: extract-highlights.sh  smoke_v1_button_grid.py  smoke_v2_checkbox.py  smoke_v2_checkbox_in_container.py
scripts/spike/: README.md  postgres_aad_probe.py
src/mom_bot/: __init__.py  __main__.py  config.py  discord_authz.py  main.py  telemetry.py
src/mom_bot/db/: __init__.py
src/mom_bot/health/: __init__.py  liveness.py
src/mom_bot/member_activity/: __init__.py  models.py  scheduler.py  service.py
src/mom_bot/member_notifications/: __init__.py  commands.py  models.py  schedule.py  service.py
src/mom_bot/migrations/: __init__.py  acquire_token.py
src/mom_bot/new_member_alerts/: __init__.py  commands.py  models.py  service.py
src/mom_bot/post_conditions/: client.py  commands.py  discord_display.py  grid_layout.py  modal_layout.py  views.py
src/mom_bot/reminders/: __init__.py  calendar.py  models.py  scheduler.py  seed.py  sent_store.py
src/mom_bot/roles/: seed.py  service.py
src/mom_bot/sidecar/: app.py  auth.py
tests/: test_acquire_token.py  test_alembic.py  test_alembic_member_activity.py  test_alembic_postgres.py  test_config.py  test_day_role_map.py  test_db_token_injection.py  test_extract_highlights.py  test_health.py  test_health_liveness.py  test_main.py  test_main_wireup.py  test_migrate_sh.py  test_migrations_startup.py  test_on_member_join.py  test_on_member_join_activity_tracking.py  test_on_member_join_channel_cache_miss.py  test_on_member_join_officer_alerts.py  test_on_message.py  test_reminders_calendar.py  test_reminders_scheduler.py  test_reminders_seed.py  test_reminders_sent_store.py  test_reminders_tank_week_scheduler.py  test_reminders_tank_week_seed.py  test_sidecar_bootstrap.py  test_smoke.py  test_version.py
tests/member_activity/: test_models.py  test_scheduler.py  test_service.py
tests/member_notifications/: __init__.py  test_commands.py  test_schedule.py  test_service.py
tests/new_member_alerts/: test_commands.py  test_migration.py  test_service.py
tests/post_conditions/: test_client.py  test_commands.py  test_discord_display.py  test_grid_layout.py  test_modal.py  test_modal_layout.py  test_views.py
tests/roles/: test_service.py
tests/sidecar/: test_auth_missing_header.py  test_members.py  test_otel_spans.py  test_post_image.py  test_rate_limit.py  test_role_sync.py  test_validation_boundaries.py  test_version_health_auth.py
