[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mom-bot"
version = "0.0.1"
description = "RAID guild Discord bot"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4",
    "aiohttp>=3.9",
    "pydantic>=2",
    "sqlalchemy>=2",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pip-audit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mom_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
