[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mom-bot"
version = "0.0.1"
description = "RAID guild Discord bot"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4",
    "aiohttp>=3.9",
    "pydantic>=2",
    "sqlalchemy>=2",
    "alembic",
    "azure-identity>=1.17",
    "azure-keyvault-secrets>=4.8",
    "fastapi>=0.111,<1.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pip-audit",
    "time-machine",
    "anyio[trio]",
    "testcontainers>=4.14.2",
    "psycopg[binary]>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mom_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true

# Alembic auto-generates env.py and migration files that don't carry full
# type annotations; exclude them from strict checking.
[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

# azure-identity ships py.typed but msal (a transitive dep) does not.
# Suppress missing-stub errors for the msal import chain only.
[[tool.mypy.overrides]]
module = "msal.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
